tests/cases/errors/compile_fun_missing_body.lox
// A function body must be a block enclosed in braces.
// expect compile error: Expect '{' before function body
fun foo()
